architecture/platform/kubernetes/base/observability/elastic-vm-services.yaml
apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-vm
  namespace: elastic-stack
spec:
  ports:
    - name: http
      port: 9200
      targetPort: 9200
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: elasticsearch-vm-1
  namespace: elastic-stack
  labels:
    kubernetes.io/service-name: elasticsearch-vm
addressType: IPv4
ports:
  - name: http
    port: 9200
endpoints:
  - addresses: [192.168.33.30]
    conditions:
      ready: true
---
apiVersion: v1
kind: Service
metadata:
  name: otel-edge-vm
  namespace: elastic-stack
spec:
  ports:
    - name: otlp-grpc
      port: 4317
      targetPort: 4317
    - name: otlp-http
      port: 4318
      targetPort: 4318
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: otel-edge-vm-1
  namespace: elastic-stack
  labels:
    kubernetes.io/service-name: otel-edge-vm
addressType: IPv4
ports:
  - name: otlp-grpc
    port: 4317
  - name: otlp-http
    port: 4318
endpoints:
  - addresses: [192.168.33.30]
    conditions:
      ready: true
---
apiVersion: v1
kind: Service
metadata:
  name: kibana-vm
  namespace: elastic-stack
spec:
  ports:
    - name: http
      port: 5601
      targetPort: 5601
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: kibana-vm-1
  namespace: elastic-stack
  labels:
    kubernetes.io/service-name: kibana-vm
addressType: IPv4
ports:
  - name: http
    port: 5601
endpoints:
  - addresses: [192.168.33.30]
    conditions:
      ready: true
---
apiVersion: v1
kind: Service
metadata:
  name: fleet-server-vm
  namespace: elastic-stack
spec:
  ports:
    - name: http
      port: 8220
      targetPort: 8220
---
apiVersion: discovery.k8s.io/v1
kind: EndpointSlice
metadata:
  name: fleet-server-vm-1
  namespace: elastic-stack
  labels:
    kubernetes.io/service-name: fleet-server-vm
addressType: IPv4
ports:
  - name: http
    port: 8220
endpoints:
  - addresses: [192.168.33.30]
    conditions:
      ready: true
