architecture/platform/kubernetes/base/observability/elastic-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: elasticsearch
  namespace: elastic-stack
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`elasticsearch.observability.test`)
      services:
        - name: elasticsearch-vm
          port: 9200
          scheme: http
  tls:
    secretName: elastic-public-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: kibana
  namespace: elastic-stack
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`kibana.observability.test`)
      services:
        - name: kibana-vm
          port: 5601
          scheme: http
  tls:
    secretName: elastic-public-tls
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: fleet-server
  namespace: elastic-stack
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`fleet.observability.test`)
      services:
        - name: fleet-server-vm
          port: 8220
          scheme: http
  tls:
    secretName: elastic-public-tls
